--- a/todo/package.json
+++ b/todo/package.json
@@ -4,7 +4,8 @@
   "description": "The thing that will make your life easier, organize tasks with breeze",
   "private": "true",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "serve": "webpack serve"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
     "html-webpack-plugin": "^5.5.3",
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
