--- a/todo/package.json
+++ b/todo/package.json
@@ -5,7 +5,7 @@
   "private": "true",
   "scripts": {
     "build": "webpack",
-    "serve": "webpack serve",
+    "dev": "webpack serve",
     "publish": "git subtree push --prefix dist origin gh-pages"
   },
   "repository": {
