--- a/weather-app/package.json
+++ b/weather-app/package.json
@@ -20,5 +20,8 @@
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
+  },
+  "dependencies": {
+    "dateformat": "^5.0.3"
   }
 }
