--- a/rock-paper-scissors/package.json
+++ b/rock-paper-scissors/package.json
@@ -4,17 +4,21 @@
   "description": "An amazing original game",
   "private": true,
   "scripts": {
+    "test": "jest",
     "dev": "live-server ."
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ThreeDotsEllipsis/rock-paper-scissors.git"
+    "url": "git+https://github.com/nickpinecone/rock-paper-scissors.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ThreeDotsEllipsis/rock-paper-scissors/issues"
+    "url": "https://github.com/nickpinecone/rock-paper-scissors/issues"
   },
-  "homepage": "https://github.com/ThreeDotsEllipsis/rock-paper-scissors#readme"
+  "homepage": "https://github.com/nickpinecone/rock-paper-scissors#readme",
+  "devDependencies": {
+    "jest": "^29.7.0"
+  }
 }
