--- a/todo/package.json
+++ b/todo/package.json
@@ -4,20 +4,19 @@
   "description": "The thing that will make your life easier, organize tasks with breeze",
   "private": "true",
   "scripts": {
-    "prepublish": "webpack",
-    "publish": "gh-pages -d dist",
+    "build": "webpack",
     "dev": "webpack serve"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ThreeDotsEllipsis/todo.git"
+    "url": "git+https://github.com/nickpinecone/todo.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/ThreeDotsEllipsis/todo/issues"
+    "url": "https://github.com/nickpinecone/todo/issues"
   },
-  "homepage": "https://github.com/ThreeDotsEllipsis/todo#readme",
+  "homepage": "https://github.com/nickpinecone/todo#readme",
   "devDependencies": {
     "css-loader": "^6.8.1",
     "gh-pages": "^6.1.1",
