Use Ocelot for proxying http requests from core to microservices

--- a/message-bot/server/students/Properties/launchSettings.json
+++ b/message-bot/server/students/Properties/launchSettings.json
@@ -12,8 +12,8 @@
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
-      "applicationUrl": "http://localhost:5155",
+      "launchBrowser": false,
+      "applicationUrl": "http://localhost:5002",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
