--- a/message-bot/server/signal/Signal.csproj
+++ b/message-bot/server/signal/Signal.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="NServiceBus" Version="9.2.2" />
+    <PackageReference Include="NServiceBus.RabbitMQ" Version="9.1.1" />
   </ItemGroup>
 
   <ItemGroup>
