Add postgres database

--- a/message-bot/server/students/appsettings.Development.json
+++ b/message-bot/server/students/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Database": "Host=localhost;Database=studentdb;Username=student;Password=password"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
