Put the whole app into docker containers

--- a/message-bot/compose.yml
+++ b/message-bot/compose.yml
@@ -6,3 +6,74 @@ services:
       - 5005:5005
     volumes:
       - ./client:/opt/client
+
+  bot:
+    build: ./bot
+    command: dotnet run
+    volumes:
+      - ./bot:/opt/bot
+
+  mq:
+    image: rabbitmq
+    ports:
+      - 5674:5672
+      - 15674:15672
+    volumes:
+      - mqdata:/var/lib/rabbitmq
+    healthcheck:
+      test: rabbitmq-diagnostics check_port_connectivity
+      interval: 10s
+      timeout: 30s
+      retries: 10
+
+  core:
+    build: ./server/core
+    command: dotnet run
+    ports:
+      - 5000:5000
+    volumes:
+      - ./server/core:/opt/core
+
+  studentdb:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: studentdb
+    ports:
+      - 5101:5432
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+  students:
+    build:
+      context: ./server
+      dockerfile: ./students/Dockerfile
+    command: dotnet run
+    depends_on:
+      mq:
+        condition: service_healthy
+      studentdb:
+        condition: service_started
+    ports:
+      - 5001:5001
+    volumes:
+      - ./server/students:/opt/students
+
+  signal:
+    build:
+      context: ./server
+      dockerfile: ./signal/Dockerfile
+    command: dotnet run
+    depends_on:
+      mq:
+        condition: service_healthy
+    ports:
+      - 5002:5002
+    volumes:
+      - ./server/signal:/opt/signal
+
+volumes:
+  pgdata:
+  mqdata:
