--- a/message-bot/server/students/appsettings.Development.json
+++ b/message-bot/server/students/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Database": "Host=localhost;Database=studentdb;Username=student;Password=password"
+    "Database": "Host=studentdb;Database=studentdb;Username=postgres;Password=postgres"
   },
   "Logging": {
     "LogLevel": {
