--- a/message-bot/server/signal/Properties/launchSettings.json
+++ b/message-bot/server/signal/Properties/launchSettings.json
@@ -13,7 +13,7 @@
             "commandName": "Project",
             "dotnetRunMessages": true,
             "launchBrowser": false,
-            "applicationUrl": "http://localhost:5002",
+            "applicationUrl": "http://0.0.0.0:5002",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
